[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.41"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls"] }
walkdir = "2.5.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
